...

        </android.support.design.widget.TextInputLayout>


        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="Done!"/>

        <!-- radius -->
    </LinearLayout>


</FrameLayout>
...
