...
        </LinearLayout>
        </HorizontalScrollView>



        <android.support.design.widget.FloatingActionButton
            android:id="@+id/profileFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
...
